# task-automator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
fixtures/csv/: expenses_import.csv
scripts/: demo_run.sh  dev_bootstrap.sh
src/taskz/: cli.py  config.py  logging.py
src/taskz/db/: connection.py
src/taskz/db/migrations/: 0001_init.sql  0002_rules.sql
src/taskz/expenses/: __init__.py  exporters.py  importers.py  models.py  reports.py
src/taskz/files/: __init__.py  hashing.py  preview.py  renamer.py  undo.py
src/taskz/receipts/: ingest.py  normalize.py
src/taskz/receipts/parsers/: __init__.py  detector.py  generic_html.py  jumia.py  uber.py
src/taskz/utils/: currency.py  dates.py  exif.py  paths.py
tests/: conftest.py
tests/cli/: test_expenses_reports.py  test_files_rename.py  test_receipts_scrape.py
tests/unit/: test_rules.py  test_templating.py
